--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ macht doch einfach einen Fünfer gerade sein.“
   </div>
   <div class="legend-item">
     <div class="legend-badge rot"></div>
-    <span><strong>Rot:</strong> Riskant – kann falsch oder unpassend sein.Nicht verwenden für wichtige Inhalte – ggf. grobe Orientierung, aber mit Vorsicht.</span>
+    <span><strong>Rot:</strong> Riskant – kann falsch oder unpassend sein.Nicht verwenden für wichtige Inhalte.</span>
   </div>
 </div>
  
