--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ macht doch einfach einen Fünfer gerade sein.“
     </div>
     <div id="overlay-mark" class="overlay-box">
       <strong>Problemstelle:</strong> „That's a big dog!“<br><br>
-      <strong>Vorschlag:</strong> "That's unbelievable!" oder "That's outrageous!"<br><br>
+      <strong>Vorschlag:</strong> "That's outrageous!"<br><br>
       <button class="uebernehmen" onclick="applySuggestion()">Übernehmen</button>
       <button class="rueck" onclick="showBackTranslation()">Rückübersetzung</button>
       <p id="backtranslation" style="margin-top:10px; display:none; color:#555;"></p>
