--- a/index.html
+++ b/index.html
@@ -62,6 +62,30 @@
     margin-top: 0.5rem; padding: 0.4rem 0.8rem; border: none; border-radius: 4px; background: #eee; cursor: pointer;
   }
   .help-box button:hover { background: #ddd; }
+
+    .tooltip {
+  position: relative;
+}
+.tooltip::after {
+  content: attr(data-tooltip);   /* Holt den Text aus data-tooltip */
+  position: absolute;
+  bottom: 75%;                  /* über der Badge */
+  left: 75%;
+  transform: translateX(-50%);
+  background: #333;
+  color: #fff;
+  padding: 6px 8px;
+  border-radius: 4px;
+  white-space: nowrap;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.2s;
+  z-index: 1000;
+}
+.tooltip:hover::after,
+.tooltip.show::after {           /* bei Hover oder Klick sichtbar */
+  opacity: 1;
+}
 </style>
 </head>
 <body>
@@ -103,7 +127,11 @@
 
   <div id="target-pane" class="editable" contenteditable="true">
     <h4>Zieltext 
-      <span id="overall-score" class="overall-badge">Gesamteinschätzung: 🔴 Rot</span>
+      <span id="overall-score" 
+      class="overall-badge rot tooltip" 
+      data-tooltip="Die Gesamteinschätzung fasst alle Segmentbewertungen zusammen.">
+  Gesamteinschätzung: 🔴 Riskant
+</span>
     </h4>
     "<span class="mark rot" data-key="hund">That's a big dog!</span>" shouted the manager after the presentation.
     "We absolutely have to get this done by the next meeting, otherwise <span class="mark rot" data-key="juice">we'll run out of juice</span>.
@@ -134,6 +162,13 @@ function openOverlay(level) {
   const el = document.getElementById('overlay-' + level);
   if (el) el.classList.remove('hidden');
 }
+
+document.addEventListener('DOMContentLoaded',()=>{
+  const badge=document.getElementById('overall-score');
+  badge.addEventListener('click',()=>{
+    badge.classList.toggle('show'); // Tooltip sichtbar/unsichtbar
+  });
+});
 
 document.addEventListener('DOMContentLoaded', () => {
   /* Rückübersetzungen */
